# livechat

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  celerybeat-schedule  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_name.py
backend/accounts/services/: rate_limit_service.py
backend/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/livechat/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/redis/: redis.conf
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: Loading.tsx  VerifyOtp.tsx
frontend/src/context/: AppContext.tsx
